[package]
name = "parrothacker1"
version = "0.1.0"
authors = ["h4ck3r@parrot <rajeevgoutham1@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
log="0.4.14"
env_logger="0.4.0"
rustc-serialize="0.3"
dotenv = "0.13.0"
openssl = "0.10"
postgres = { version = "0.16.0-rc.2", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_7"]}
postgres-openssl = "0.2.0-rc.1"
r2d2 = "0.8"
r2d2_postgres = "0.15.0-rc.1"
